2006-07-05  Matevz Tadel  <matevz.tadel@ijs.si>

	* images.C:
	* images2.C:
	Removed Load()/SetLoadAdEnlight(true) calls for textures
	(better handling of loading and shadowing in ZImage).

2006-04-01  Matevz Tadel  <matevz.tadel@ijs.si>

	* images.C:
	Added two md2 objects. Changed terrain to flat rendering,
	modified lamp (more ambient, slightly colored).

	* md2/faerie-1.png:
	* md2/faerie-2.png:
	* md2/faerie-3.png:
	* md2/faerie-4.png:
	* md2/faerie-5.png:
	* md2/faerie-6.png:
	* md2/faerie.md2:
	* md2/rei.md2:
	* md2/rei.png:
	Demos for Md2Object; downloaded from fileplanet.

2005-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	* Makefile:
	OSX.

	* metagui_test.C:
	Changed Nx/Ny for wgl-directory.

2005-10-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* WS_demo.C:
	Added an eventor with demo of WSWalker.

	* metagui_test.C:
	Added TimeMaker and a TimeScreenText (being a TimeMakerClient).

	* gl_tests.C:
	* images.C:
	* images2.C:
	* rot_lamps.C:
	Lamp::Scale was renamed to Lamp::LampScale.

	* run_all.sh:
	New file, run all demos.

2005-08-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* metagui_test.C:
	Added a WGlValuator GL-weed to modify sleep time of the rotator.

2005-07-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* metagui_test.C:
	Modified and extended to use new GL-widget stuff; added standard
	camera bases for orthographic viewing.

2005-06-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* metagui_test.C:
	Spawn eye in a manner consistent with eye.C macro.

2005-06-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* metagui_test.C:
	Added demo of interactive overlays.

2005-06-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* WS_demo.C:
	* gl_tests.C:
	* images.C:
	* images2.C:
	* metagui_test.C:
	* remove_test.C:
	* rot_lamps.C:
	* spheres.C:
	Updated to new startup macro conventions.

2005-04-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* metagui_test.C:
	Added a clipping plane example; somewhat beautifed construction.

2005-04-12  Matevz Tadel  <matevz.tadel@ijs.si>
